# Borderless-Radiology-backend

./: .env.example  .gitignore  Borderless_Incubation_Workflow.md  README.md  current status of project.md  notification-integration.md  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 20260424_0001_initial.py  20260428_0002_groundtruth_csv_columns.py  20260428_0003_rad_state_modality_preferred.py  20260429_0004_groundtruth_case_type.py  20260429_0005_drop_llm_model.py  20260430_0006_callback_status_skipped.py
app/: config.py  main.py  models.py  prompts.py  schemas.py  security.py
app/api/: activation.py  grading.py  incubation_webhook.py  pool.py
app/jobs/: seven_day_timeout.py
app/services/: activation_service.py  checkpoint.py  external_callback.py  grade_utils.py  grader.py  incubation_webhook.py  llm.py  notification_copy.py  slack.py  summary.py
scripts/: case_anonymization.py  classify_groundtruth_pathologies.py  init_db.sh  init_db.sql  send_study_to_webhook.py  upload_groundtruth_csv.py  upload_test_cases_csv.py  vm-init-borderless.sql  yotta_push.py
